--- a/lib/dedalo/component_inverse/html/component_inverse_edit.phtml
+++ b/lib/dedalo/component_inverse/html/component_inverse_edit.phtml
@@ -74,7 +74,7 @@
 						$label = RecordObj_dd::get_termino_by_tipo($current_component_tipo);
 						$line .= '<span class="inverse_show_component_label">'.$label.'</span>';
 					}
-				}			
+				}//end foreach			
 				
 				# Inverse values (defined in structure as related terms)
 				$current_value = $this->get_inverse_value($current_locator);				
@@ -89,19 +89,19 @@
 			$html_content .= "<span class=\"debug_info notes\">".$dato_json."</span>";
 		}
 
+
+		#
+		# JS Init component
+		$html_content .= '<script>';
+		# Init component
+		$init_options = new stdClass();
+			$init_options->component_name 	= $component_name;
+			$init_options->wrapper_id 		= $id_wrapper;
+		$html_content .= 'component_common.init('.json_encode($init_options).');';
+		$html_content .= '</script>';
 		
 
-		/*
-		$html_content .= " <input class=\"css_section_id\" type=\"text\" 
-		name=\"{$input_name}\" 
-		data-tipo=\"{$tipo}\"
-		data-section_tipo=\"{$section_tipo}\"
-		data-parent=\"{$parent}\"
-		data-lang=\"{$lang}\" 
-		value=\"{$dato}\" 
-		title=\"$html_title\"
-		/>";
-		*/
+		
 		# Prepare content to show in page
 		tools::prepare_content($html_content);		
 
