--- a/lib/dedalo/component_ip/html/component_ip_edit.phtml
+++ b/lib/dedalo/component_ip/html/component_ip_edit.phtml
@@ -27,38 +27,44 @@
 	switch(true) {
 			
 		case $permissions===0	:
-				$html_content .= '';
-				break;
+			$html_content .= '';
+			break;
 					
 		case ($permissions>=1)	:
 			
-				$html_content .= "<span class=\"css_span_dato list_ip_dato\" ";
-				$html_content .= "data-tipo=\"{$tipo}\" ";
-				$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
-				$html_content .= "data-parent=\"{$parent}\" ";
-				$html_content .= "data-lang=\"{$lang}\" ";
-				$html_content .= ">";
-				$html_content .= $dato;
-				$html_content .= "</span>";
+			$html_content .= "<span class=\"css_span_dato list_ip_dato\" ";
+			$html_content .= "data-tipo=\"{$tipo}\" ";
+			$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
+			$html_content .= "data-parent=\"{$parent}\" ";
+			$html_content .= "data-lang=\"{$lang}\" ";
+			$html_content .= ">";
+			$html_content .= $dato;
+			$html_content .= "</span>";
 
 
-				# GEOIP FLAGS : geoip_info
-				if (isset($geoip_info) && is_object($geoip_info)) {
-					
-					#$html_content .= "<span class=\"city_span\">$geoip_info->city</span>" ;
-					$html_content .= '<a href="'.$geoip_info->geo_tool_link.'" target="_blank">';
-					# Flag (http://cdn.whatismyipaddress.com/images/flags/mx.png)
-					$flag_url 	= DEDALO_LIB_BASE_URL.'/themes/default/flags/'.$geoip_info->code.'.gif';
-					$title 		= $geoip_info->continent .' '. $geoip_info->country .' '. $geoip_info->region_name;
-					$html_content .= '<img src="'.$flag_url.'" class="flag_img" title="'.$title.'" />'; 
-					$html_content .= '</a>';
-				}
-		
+			# GEOIP FLAGS : geoip_info
+			if (isset($geoip_info) && is_object($geoip_info)) {
 				
-				if(SHOW_DEBUG) {
-					#$html_content .= " <span class=\"css_span_debugger\" id=\"debugger_{$tipo}\" >{$debugger}</span>";
-				}
-				break;
+				#$html_content .= "<span class=\"city_span\">$geoip_info->city</span>" ;
+				$html_content .= '<a href="'.$geoip_info->geo_tool_link.'" target="_blank">';
+				# Flag (http://cdn.whatismyipaddress.com/images/flags/mx.png)
+				$flag_url 	= DEDALO_LIB_BASE_URL.'/themes/default/flags/'.$geoip_info->code.'.gif';
+				$title 		= $geoip_info->continent .' '. $geoip_info->country .' '. $geoip_info->region_name;
+				$html_content .= '<img src="'.$flag_url.'" class="flag_img" title="'.$title.'" />'; 
+				$html_content .= '</a>';
+			}
+	
+			
+			#
+			# JS Init component
+			$html_content .= '<script>';
+			# Init component
+			$init_options = new stdClass();
+				$init_options->component_name 	= $component_name;
+				$init_options->wrapper_id 		= $id_wrapper;
+			$html_content .= 'component_common.init('.json_encode($init_options).');';
+			$html_content .= '</script>';
+			break;
 	}	
 
 	
