--- a/lib/dedalo/component_password/html/component_password_edit.phtml
+++ b/lib/dedalo/component_password/html/component_password_edit.phtml
@@ -52,7 +52,18 @@
 				$html_content .= "onfocus=\"component_common.select_wrap_on_tab_focus(this,'$id_wrapper');\" ";
 				}
 				*/
-				$html_content .= "/>";				
+				$html_content .= "/>";
+
+
+				#
+				# JS Init component
+				$html_content .= '<script>';
+				# Init component
+				$init_options = new stdClass();
+					$init_options->component_name 	= $component_name;
+					$init_options->wrapper_id 		= $id_wrapper;
+				$html_content .= 'component_common.init('.json_encode($init_options).');';
+				$html_content .= '</script>';					
 				break;											
 	}
 
