--- a/lib/dedalo/component_publication/html/component_publication_edit.phtml
+++ b/lib/dedalo/component_publication/html/component_publication_edit.phtml
@@ -65,12 +65,16 @@
 
   				$html_content .= "</div>";//end switcher_publication
 
-				# JS
-				$html_content .= "<script>";
-				#$html_content .= "component_publication.value_yes = '$value_yes';";
-				#$html_content .= "component_publication.value_no  = '$value_no';";
-				$html_content .= "component_publication.init({\"id_wrapper\":'$id_wrapper'});";
-				$html_content .= "</script>";
+				#
+				# JS Init component
+				$html_content .= '<script>';
+				# Init component
+				$init_options = new stdClass();
+					$init_options->component_name 	= $component_name;
+					$init_options->id_wrapper 		= $id_wrapper;
+					$init_options->uid 				= $identificador_unico;
+				$html_content .= 'component_common.init('.json_encode($init_options).');';
+				$html_content .= '</script>';
 
 				//$html_content .= "<script>component_publication.check_publication('{$id_wrapper}')</script>";
 
