--- a/lib/dedalo/component_radio_button/html/component_radio_button_edit.phtml
+++ b/lib/dedalo/component_radio_button/html/component_radio_button_edit.phtml
@@ -124,6 +124,17 @@
 					$i++;
 				}
 				$html_content .= "</ul>";
+
+				#
+				# JS Init component
+				$html_content .= '<script>';
+				# Init component
+				$init_options = new stdClass();
+					$init_options->component_name 	= $component_name;
+					$init_options->wrapper_id 		= $id_wrapper;
+					$init_options->mandatory 		= $mandatory;
+				$html_content .= 'component_common.init('.json_encode($init_options).');';
+				$html_content .= '</script>';
 				break;
 	}//end switch($permissions)
 
@@ -142,11 +153,7 @@
 
 	print "</div>"; //wrap
 
-
-	// First test on load element
-	if ($mandatory===true) {
-		echo "<script>component_radio_button.mandatory('{$id_wrapper}')</script>";
-	}
+	
 
 	# html_delimiter
 	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'out', $modo, $lang);
