--- a/lib/dedalo/component_security_administrator/html/component_security_administrator_edit.phtml
+++ b/lib/dedalo/component_security_administrator/html/component_security_administrator_edit.phtml
@@ -6,16 +6,16 @@
 	# html_delimiter
 	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'in');
 
-	print "<div class=\"wrap_component css_wrap_security_administrator wrap_component_{$tipo}\" id=\"{$id_wrapper}\"
-	data-tipo=\"{$tipo}\"
-	data-lang=\"{$lang}\"
-	data-parent=\"{$parent}\"
-	data-section_tipo=\"{$section_tipo}\"
-	data-modo=\"{$modo}\"
-	data-dato=\"{$dato_string}\"
-	data-component_name=\"{$component_name}\"
-	data-component_info='{$component_info}'
-	>";
+	print "<div class=\"wrap_component css_wrap_security_administrator wrap_component_{$tipo}\" id=\"{$id_wrapper}\" ";
+	print "data-tipo=\"{$tipo}\" ";
+	print "data-lang=\"{$lang}\" ";
+	print "data-parent=\"{$parent}\" ";
+	print "data-section_tipo=\"{$section_tipo}\" ";
+	print "data-modo=\"{$modo}\" ";
+	print "data-dato=\"{$dato_string}\" ";
+	print "data-component_name=\"{$component_name}\" ";
+	print "data-component_info='{$component_info}' ";
+	print ">";
 	
 	# ETIQUETA (LABEL)
 	$html_label = component_common_draw::draw_label($this);	
@@ -35,14 +35,14 @@
 				# CASE CHECKED				
 				$checked = (int)$dato===1 ? 'checked="checked"' : '';
 
-				$html_contenido .= " <input type=\"checkbox\" class=\"css_security_administrator\"
-				id=\"{$identificador_unico}\"
-				name=\"{$tipo}_{$parent}\"
-				value=\"{$tipo}\"
-				title=\"$html_title\"
-				$checked
-				disabled
-				/>";
+				$html_contenido .= "<input type=\"checkbox\" class=\"css_security_administrator\" ";
+				$html_contenido .= "id=\"{$identificador_unico}\" ";
+				$html_contenido .= "name=\"{$tipo}_{$parent}\" ";
+				$html_contenido .= "value=\"{$tipo}\" ";
+				$html_contenido .= "title=\"$html_title\" ";
+				$html_contenido .= "$checked ";
+				$html_contenido .= "disabled ";
+				$html_contenido .= "/>";
 				break;	
 				
 		case ($permissions>=2) :
@@ -61,24 +61,23 @@
 				$checked = (int)$dato===1 ? 'checked="checked"' : '';
 
 
-				$html_contenido .= " <input type=\"checkbox\" class=\"css_security_administrator\"
-				onchange=\"component_security_administrator.Save(this)\"				
-				id=\"{$identificador_unico}\"
-				name=\"{$tipo}_{$parent}\"
-				value=\"{$tipo}\"
-				data-tipo=\"{$tipo}\"
-				data-lang=\"{$lang}\"
-				data-section_tipo=\"{$section_tipo}\"
-				data-parent=\"{$parent}\"
-				title=\"$html_title\"
-				$checked
-				$disabled
-				/>";
+				$html_contenido .= "<input type=\"checkbox\" class=\"css_security_administrator\" ";
+				$html_contenido .= "onchange=\"component_security_administrator.Save(this)\" ";				
+				$html_contenido .= "id=\"{$identificador_unico}\" ";
+				$html_contenido .= "name=\"{$tipo}_{$parent}\" ";
+				$html_contenido .= "value=\"{$tipo}\" ";
+				$html_contenido .= "data-tipo=\"{$tipo}\" ";
+				$html_contenido .= "data-lang=\"{$lang}\" ";
+				$html_contenido .= "data-section_tipo=\"{$section_tipo}\" ";
+				$html_contenido .= "data-parent=\"{$parent}\" ";
+				$html_contenido .= "title=\"$html_title\" ";
+				$html_contenido .= "$checked ";
+				$html_contenido .= "$disabled ";
+				$html_contenido .= "/>";
 		
 				if(SHOW_DEBUG) {
 					#$html_contenido .= " <span class=\"css_span_debugger\" id=\"debugger_{$tipo}\" >{$debugger}</span>";	
-				}
-				
+				}				
 				break;							
 	}
 
