--- a/lib/dedalo/component_state/html/component_state_edit.phtml
+++ b/lib/dedalo/component_state/html/component_state_edit.phtml
@@ -152,6 +152,17 @@
 				if(SHOW_DEBUG===true) {
 					#$html_content .= " <span class=\"css_span_debugger\" id=\"debugger_{$tipo}\" >{$debugger}</span>";	
 				}
+
+				#
+				# JS Init component
+				$html_content .= '<script>';
+				# Init component
+				$init_options = new stdClass();
+					$init_options->component_name 	= $component_name;
+					$init_options->id_wrapper 		= $id_wrapper;
+					$init_options->uid 				= $identificador_unico;
+				$html_content .= 'component_common.init('.json_encode($init_options).');';
+				$html_content .= '</script>';	
 				break;							
 	}
 	
