--- a/lib/dedalo/common/css/fonts.less
+++ b/lib/dedalo/common/css/fonts.less
@@ -11,6 +11,7 @@
 	         url('../../themes/default/fonts/oxigen-webfont/oxygen-regular-webfont.svg#oxygenregular') format('svg');
 	    font-weight: normal;
 	    font-style: normal;
+	    font-display: fallback;
 }
 @font-face {
 		font-family: 'Oxygen-Bold';
@@ -22,6 +23,7 @@
 	         url('../../themes/default/fonts/oxigen-webfont/oxygen-bold-webfont.svg#oxygenbold') format('svg');
 	    font-weight: normal;
 	    font-style: normal;
+	    font-display: fallback;
 }
 @font-face {
 		font-family: 'Oxygen-light';
@@ -33,6 +35,7 @@
 	         url('../../themes/default/fonts/oxigen-webfont/oxygen-light-webfont.svg#oxygenlight') format('svg');
 	    font-weight: normal;
 	    font-style: normal;
+	    font-display: fallback;
 }
 /*
 @font-face {
