--- a/lib/dedalo/component_relation_index/html/component_relation_index_edit.phtml
+++ b/lib/dedalo/component_relation_index/html/component_relation_index_edit.phtml
@@ -11,7 +11,7 @@
 	print "data-parent=\"{$parent}\" ";
 	print "data-section_tipo=\"{$section_tipo}\" ";
 	print "data-modo=\"{$modo}\" ";
-	print "data-dato='{$dato_string}' ";
+	#print "data-dato='{$dato_string}' ";
 	print "data-component_name=\"{$component_name}\" ";
 	print "data-component_info='{$component_info}' ";
 	print ">";
