--- a/lib/dedalo/maintenance/html/maintenance.phtml
+++ b/lib/dedalo/maintenance/html/maintenance.phtml
@@ -6,19 +6,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="<?php echo DEDALO_ROOT_WEB ?>/favicon.ico" />
 <?php echo $css_link_code ?>
+<?php 
+$page_globals = new stdClass();
+	# version
+	$page_globals->dedalo_version 			= DEDALO_VERSION;
+	# lang
+	$page_globals->dedalo_application_lang 	= DEDALO_APPLICATION_LANG;
+	$page_globals->dedalo_data_lang 		= DEDALO_DATA_LANG;
+	$page_globals->dedalo_data_nolan 		= DEDALO_DATA_NOLAN;
 
+	$page_globals->section_tipo 			= defined('SECTION_TIPO') ? SECTION_TIPO : null;
+	# modo
+	$page_globals->modo 					= $modo;
+	# user_id
+	$page_globals->user_id 					= (isset($user_id)) $user_id : null;
+?>
 <script>
-var DEDALO_LIB_BASE_URL	= '<?php echo DEDALO_LIB_BASE_URL ?>', DEDALO_ROOT_WEB = '<?php echo DEDALO_ROOT_WEB ?>';
-var page_globals = {
-	dedalo_version:'<?php echo DEDALO_VERSION ?>',
-	dedalo_application_lang:'<?php echo DEDALO_APPLICATION_LANG ?>',
-	dedalo_data_lang:'<?php echo DEDALO_DATA_LANG ?>',
-	dedalo_data_nolan:'<?php echo DEDALO_DATA_NOLAN ?>',
-	section_tipo:"<?php echo defined('SECTION_TIPO') ? SECTION_TIPO : '' ?>",
-	modo:'<?php echo $modo ?>',
-	user_id:'<?php if(isset($user_id)) echo $user_id ?>'
-}
-DEBUG = <?php var_export(SHOW_DEBUG); ?>;
+const page_globals=<?php echo SHOW_DEBUG===true ? json_encode($page_globals, JSON_PRETTY_PRINT) : json_encode($page_globals) ?>;
 setTimeout(function(){
 	window.location.reload(true);
 },2000)
