--- a/lib/dedalo/section_records/rows/html/rows_list.phtml
+++ b/lib/dedalo/section_records/rows/html/rows_list.phtml
@@ -92,25 +92,39 @@
 							#
 							# SECTION TOOL: 
 							# Buttons calculated for section tool (tool_indexation, tool_transcription, tool_lang, etc..)
-								$tool_name  = $context->target_tool;								
-								$modelo_name= RecordObj_dd::get_modelo_name_by_tipo( $context->target_component_tipo, true );
-								$component 	= component_common::get_instance( $modelo_name,
-																			  $context->target_component_tipo,
-																			  $section_id,
-																			  $modo,
-																			  DEDALO_DATA_LANG,
-																			  $section_tipo);
-								$tool = new $tool_name($component,'button');
-								#dump($tool->get_html(), ' tool ++ '.to_string());
-
-								# Inverse locators info
-								#$section = section::get_instance($section_id, $section_tipo);
-								#$inverse_references = $section->get_inverse_references();								
-								#if (!empty($inverse_references)) {
 								if(true===search_development2::have_inverse_relations($section_tipo, $section_id)) {
+									
+									$tool_name  = $context->target_tool;
+
+									if(isset($context->target_component_tipo)){							
+										$modelo_name= RecordObj_dd::get_modelo_name_by_tipo( $context->target_component_tipo, true );
+										$component 	= component_common::get_instance( $modelo_name,
+																					  $context->target_component_tipo,
+																					  $section_id,
+																					  $modo,
+																					  DEDALO_DATA_LANG,
+																					  $section_tipo);
+
+										$tool = new $tool_name($component,'button');
+									}else{
+										$section = section::get_instance( 	$section_id,
+																			$section_tipo,
+																			$modo
+																		);
+										$section->tool_section_tipo = $context->tool_section_tipo;
+										$tool = new $tool_name($section,'button');
+									}
+									
+									#dump($tool->get_html(), ' tool ++ '.to_string());
+
+									# Inverse locators info
+									#$section = section::get_instance($section_id, $section_tipo);
+									#$inverse_references = $section->get_inverse_references();								
+									#if (!empty($inverse_references)) {
+								
 									$html_content .= $tool->get_html();								
 								}else{
-									$html_content .= "<span class=\"section_id_number\"> $section_id </span>";
+									$html_content .= '<span class="section_id_number">'.$section_id.'</span>';
 								}							
 							break;
 
