--- a/lib/dedalo/section/html/section_edit.phtml
+++ b/lib/dedalo/section/html/section_edit.phtml
@@ -20,26 +20,25 @@
 	print ">";
 
 
-	# CONTENT
-	$html_content  = '';
-	$html_content = "<div class=\"css_section_content section_content_list section_list_rows_content_div\" data-role=\"section_list_rows_content\" >";
+		# CONTENT
+		$html_content  = '';
+		$html_content = '<div class="section_content_list section_list_rows_content_div" data-role="section_list_rows_content">'; // css_section_content 
 
-		#$html_content .= "<div class=\"css_section_content\" id=\"section_{$identificador_unico}\" >";			
-		
 			# Fields
 			switch(true) {
 					
-				case $permissions===0 :	
+				case ($permissions===0) :	
 					
 					$html_content .= "<span class=\"css_span_dato\">";
 					$html_content .= label::get_label('contenido_no_autorizado');
 						#dump(security::$ar_permissions_table," security::ar_permissions_table");
-					$html_content .= " (Section $tipo - $modo)</span>";
+					$html_content .= " (Section $tipo - $modo)";
+					$html_content .= "</span>";
 					break;
 								
 				case ($permissions>=1) :
 
-					if($this->caller_id>0 && $modo!='edit') {
+					if($this->caller_id>0 && $modo!=='edit') {
 						$html_content .= "<div class=\"div_clear_edit_in_relation\"></div>";
 					}
 
@@ -68,12 +67,11 @@
 					break;
 			}
 
-		$html_content .= "</div>";//end css_section_content
-
+		$html_content .= '</div>';//end section_content_list
 		if(SHOW_DEBUG===true) {
-			$html_content .= "\n<!-- /css_section_content -->";
+			$html_content .= '<!-- /section_content -->';
 		}
-		
+	
 
 		#######################
 		# SIDEBAR (INSPECTOR)
@@ -92,16 +90,16 @@
 			print "<div class=\"css_section_content\" id=\"section_{$identificador_unico}\">";
 			print $html_content;
 			print "</div><!-- /css_section_content -->";
-		print "</div><!-- /records -->";#end records;
+		print '</div><!-- /records -->';#end records;
 		#######################
 
 
-	print "</div>"; //wrap
+	print '</div>'; //wrap
 
 
 	if(SHOW_DEBUG===true) {
-		print "\n<!-- /wrap_section [section_id:$section_id tipo:$tipo] -->"; //wrap
-		print "\n<!-- / SECTION EDIT [section_id:$section_id tipo:$tipo] -->\n";
+		print '<!-- /wrap_section [section_id:$section_id tipo:$tipo] -->'; //wrap
+		print '<!-- / SECTION EDIT [section_id:$section_id tipo:$tipo] -->';
 	}
 	
 
