--- a/lib/dedalo/tools/tool_description/css/tool_description.less
+++ b/lib/dedalo/tools/tool_description/css/tool_description.less
@@ -128,4 +128,19 @@ body {
 	}
 	
 
+/* COMMON
+------------------------------------------------------ */
+	// All components containers default
+	.component_container {
+		//background-color: #EBD4F5;
+		display: flex;
+		width: 50%;
+
+	}
+	// Components containers inside others
+	.container_look_inside {
+		width: 100%;
+	}
+
+	
 
