Fix page globals window features vars

--- a/lib/dedalo/html_page/html/html_page.phtml
+++ b/lib/dedalo/html_page/html/html_page.phtml
@@ -65,7 +65,7 @@ $page_globals = new stdClass();
 	$page_globals->DEDALO_NOTIFICATIONS 	  	= defined("DEDALO_NOTIFICATIONS") ? (int)DEDALO_NOTIFICATIONS : 0;
 	$page_globals->DEDALO_PUBLICATION_ALERT 	= defined("DEDALO_PUBLICATION_ALERT") ? (int)DEDALO_PUBLICATION_ALERT : 0;
 	# float_window_features
-	$page_globals->float_window_features 		= json_decode('{small:"menubar=no,location=no,resizable=yes,scrollbars=yes,status=no,width=470,height=415"}');
+	$page_globals->float_window_features 		= json_decode('{"small":"menubar=no,location=no,resizable=yes,scrollbars=yes,status=no,width=470,height=415"}');
 ?>
 
 <script>
