--- a/lib/dedalo/tools/tool_administration/html/tool_administration_page.phtml
+++ b/lib/dedalo/tools/tool_administration/html/tool_administration_page.phtml
@@ -66,13 +66,13 @@
 				$html   .= "<div class=\"panel_option\">";
 				$html   .= "  <span class=\"glyphicon glyphicon-cog\" aria-hidden=\"true\"></span> ";
 				$from_remote = '';			
-				if (DEDALO_ENTITY==="master") {
-				$html   .= " <a> ".label::get_label('actualizar_estructura')." is a disabled for ".DEDALO_ENTITY." </a>";
-				}else{
+
 				if (defined('STRUCTURE_FROM_SERVER') && STRUCTURE_FROM_SERVER===true && !empty(STRUCTURE_SERVER_URL)) {
 					$url = STRUCTURE_SERVER_URL;
 					$parse = parse_url($url);
 					$from_remote = " from remote: <strong>".$parse['host']."</strong>";
+				}else if (!defined('STRUCTURE_FROM_SERVER') || STRUCTURE_FROM_SERVER===false) {
+					$html   .= " <a> ".label::get_label('actualizar_estructura')." is a disabled for ".DEDALO_ENTITY." </a>";
 				}
 
 				$html   .= "  <a href=\"javascript:;\" data-mode=\"update_structure\" onclick=\"tool_administration.update_structure(this,event)\">".label::get_label('actualizar_estructura')."</a>".$from_remote;	
