--- a/lib/dedalo/html_page/html/html_page_header.phtml
+++ b/lib/dedalo/html_page/html/html_page_header.phtml
@@ -6,7 +6,7 @@
 if (login::is_logged()) {
 	
 	switch (true) {
-		case (DEDALO_DATABASE_CONN==='dedalo4_master'):
+		case (DEDALO_DATABASE_CONN==='dedalo4_master' && STRUCTURE_FROM_SERVER===false):
 			$menu_wrapper_css = 'menu_wrapper_debug_master';
 			break;
 		case (SHOW_DEBUG===true && DEDALO_DATABASE_CONN==='dedalo4_development' && DEDALO_ENTITY==='development'):
